--- a/Index.html
+++ b/Index.html
@@ -18,11 +18,10 @@
 
         <nav class="navbar">
             <ul class="navbar-list">
-                <li><a class="navbar-link" href="#">Home</a></li>
-                <li><a class="navbar-link" href="#">About</a></li>
-                <li><a class="navbar-link" href="#">Our Team</a></li>
-                <li><a class="navbar-link" href="#">Event</a></li>
-                <li><a class="navbar-link" href="#">Contact</a></li>
+                <li><a class="navbar-link" href="#home">Home</a></li>
+                <li><a class="navbar-link" href="#aboutus">About</a></li>
+                <li><a class="navbar-link" href="#team">Our Team</a></li>
+                <li><a class="navbar-link" href="#contact">Contact</a></li>
             </ul>
         </nav>
 
@@ -36,7 +35,7 @@
           Our Main Hero Section Start  
     ========================================  -->
     <main>
-        <section class="section-hero">
+        <section class="section-hero1" id="home">
             <div class="bgimage"></div>
             <div class="hero">
                 <div class="name a1">IET DAVV</div>
@@ -48,16 +47,37 @@
     <!-- ======================================== 
           Our Service Section Start  
     ========================================  -->
-    <section class="section-services">
+    <div class="abt" id="aboutus">
+    <section class="section-services" >
         <div class="hero">
-            <p>Services section</p>
+            <div class="name">About Us</div>
+            <div class="nme">ACM brings together computing educators,
+                researchers, and professionals to inspire
+                dialogue, share resources, and address the
+                field's challenges. As the world's largest
+                computing society, ACM strengthens the
+                profession's collective voice through strong
+                leadership, promotion of the highest
+                standards, and recognition of technical
+                excellence. ACM supports the professional
+                growth of its members by providing
+                opportunities for life-long learning, career
+                development, and professional networking.</div>
         </div>
     </section>
-
-    <section class="section-teams">
+</div>
+    <section class="section-teams" id="team">
         <div class="name">The Team</div>
         <div class="hero alignimg">
-
+            <div class="image">
+                <img class="image__img" src="img/CPPATIDAR.jpeg" alt="Bricks">
+                <div class="image__overlay image__overlay--primary">
+                    <div class="image__title">Chandra Prakash Patidar</div>
+                    <p class="image__description">
+                        Faculty Sponser
+                    </p>
+                </div>
+            </div>
             <div class="image">
                 <img class="image__img" src="img/Rupam.jpeg" alt="Bricks">
                 <div class="image__overlay image__overlay--primary">
@@ -95,18 +115,18 @@
                 </div>
             </div>
             <div class="image">
-                <img class="image__img" src="img/v.jpeg" alt="Bricks">
+                <img class="image__img" src="img/anuj.jpeg" alt="Bricks">
                 <div class="image__overlay image__overlay--primary">
-                    <div class="image__title">Vishwesh Porwal</div>
+                    <div class="image__title">Anuj Deshmukh</div>
                     <p class="image__description">
                         Technical Head
                     </p>
                 </div>
             </div>
             <div class="image">
-                <img class="image__img" src="img/anuj.jpeg" alt="Bricks">
+                <img class="image__img" src="img/v.jpeg" alt="Bricks">
                 <div class="image__overlay image__overlay--primary">
-                    <div class="image__title">Anuj Deshmukh</div>
+                    <div class="image__title">Vishwesh Porwal</div>
                     <p class="image__description">
                         Technical Head
                     </p>
@@ -126,7 +146,7 @@
                 <div class="image__overlay image__overlay--primary">
                     <div class="image__title">Lakshya</div>
                     <p class="image__description">
-                        Public Relation Head
+                        Marketing Head
                     </p>
                 </div>
             </div>
@@ -135,14 +155,14 @@
                 <div class="image__overlay image__overlay--primary">
                     <div class="image__title">Sarvada</div>
                     <p class="image__description">
-                        Web Master
+                        Public Relation Master
                     </p>
                 </div>
             </div>
 
         </div>
     </section>
-    <section class="section-services">
+    <section class="section-services2" id="contact">
         <div class="hero">
             <div class="content">
 
